# ai-infra-study-notes

./: .gitignore  01-learning-map.md  02-core-knowledge.md  03-code-cookbook.md  04-source-digests.md  05-study-plan.md  06-微信资料整理入口.md  07-两篇微信资料学习提要.md  08-中文开源教程与实战资源补充.md  09-Skill设计与skill-creator学习笔记.md  10-Harness-Engineering实战补充.md  11-高质量Skills与业务Skill指南.md  12-OpenSearch-VL多模态Search-Agent总结.md  AI-Infra-直读学习手册.md  Awesome-Lists-精读版.md  README.md  source-link-index.json
upstream-learning-sources/awesome-ai-apps-curated/advance_ai_agents/conference_agnositc_cfp_generator/: .env.example  README.md  pyproject.toml
upstream-learning-sources/awesome-ai-apps-curated/advance_ai_agents/conference_agnositc_cfp_generator/src/config/: nebius_client.py
upstream-learning-sources/awesome-ai-apps-curated/advance_ai_agents/content_team_agent/: README.md  app.py  main.py  pyproject.toml  tools.py
upstream-learning-sources/awesome-ai-apps-curated/advance_ai_agents/context_engineering_pipeline/: .env.example  README.md  app.py  pyproject.toml  runner.py
upstream-learning-sources/awesome-ai-apps-curated/advance_ai_agents/context_engineering_pipeline/prompts/: classification_json.txt  classification_markdown.txt  classification_xml.txt  extraction_json.txt  extraction_markdown.txt  extraction_xml.txt
upstream-learning-sources/awesome-ai-apps-curated/advance_ai_agents/due_diligence_agent/: .env.example  README.md  agents.py  main.py  prompts.py  pyproject.toml
upstream-learning-sources/awesome-ai-apps-curated/mcp_ai_agents/e2b_docker_mcp_agent/: .env.example  README.md  main.py  pyproject.toml
upstream-learning-sources/awesome-ai-apps-curated/memory_agents/ai_consultant_agent/: README.md  app.py  pyproject.toml  workflow.py
upstream-learning-sources/awesome-ai-apps-curated/memory_agents/ai_consultant_agent/.streamlit/: config.toml
upstream-learning-sources/awesome-ai-apps-curated/memory_agents/customer_support_voice_agent/: .env.example  README.md  app.py  ingest_studio1.py  pyproject.toml  requirements.txt
upstream-learning-sources/awesome-ai-apps-curated/memory_agents/customer_support_voice_agent/.streamlit/: config.toml
upstream-learning-sources/awesome-ai-apps-curated/memory_agents/product_launch_agent/: README.md  pyproject.toml
upstream-learning-sources/awesome-ai-apps-curated/memory_agents/youtube_trend_agent/: .env.example  README.md  app.py  core.py  pyproject.toml
upstream-learning-sources/awesome-ai-apps-curated/memory_agents/youtube_trend_agent/.streamlit/: config.toml
upstream-learning-sources/awesome-ai-apps-curated/rag_apps/advanced_rag_with_reranking/: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
upstream-learning-sources/awesome-ai-apps-curated/rag_apps/advanced_rag_with_reranking/evals/: rag_eval_50.py  ragas_eval.py
upstream-learning-sources/awesome-ai-apps-curated/rag_apps/advanced_rag_with_reranking/src/boeing_rag/: __init__.py  answering.py  api.py  chunking.py  cli.py  config.py  contextual.py  db.py  embeddings.py  ingest.py  orm.py  parser.py  rerank.py  retrieval.py  schemas.py  services.py  sparse.py  table_quality.py  upload_jobs.py  utils.py  vector_store.py  vision.py
upstream-learning-sources/awesome-ai-apps-curated/rag_apps/advanced_rag_with_reranking/web/: index.html  package-lock.json  package.json
upstream-learning-sources/awesome-ai-apps-curated/rag_apps/advanced_rag_with_reranking/web/src/: PdfChunkPreview.tsx  api.ts  main.tsx  styles.css  types.ts
upstream-learning-sources/awesome-ai-apps-curated/rag_apps/chat_with_code/: pyproject.toml
upstream-learning-sources/awesome-ai-apps-curated/rag_apps/contextual_ai_rag/: README.md  pyproject.toml
upstream-learning-sources/awesome-ai-apps-curated/rag_apps/qwen3_rag/: README.md  pyproject.toml
upstream-learning-sources/awesome-ai-apps-curated/rag_apps/trustworthy_rag/: README.md  main.py  pyproject.toml  requirements.txt
upstream-learning-sources/awesome-ai-apps-curated/rag_apps/video_rag/: .env.example  README.md  embeddings.py  ingest.py  main.py  pyproject.toml  rag.py  requirements.txt  weaviate_store.py
upstream-learning-sources/awesome-ai-apps-curated/simple_ai_agents/agent_discovery_agent/: README.md  main.py  pyproject.toml  requirements.txt
upstream-learning-sources/awesome-ai-apps-curated/simple_ai_agents/email_to_calendar_scheduler/: README.md  pyproject.toml
upstream-learning-sources/awesome-ai-apps-curated/simple_ai_agents/stock_portfolio_analyst/: README.md  main.py  pyproject.toml  requirements.txt
upstream-learning-sources/awesome-ai-apps-curated/starter_ai_agents/autogen_starter/: README.md  main.py  pyproject.toml  requirements.txt
upstream-learning-sources/awesome-ai-apps-curated/starter_ai_agents/langchain_starter/: README.md  main.py  pyproject.toml  requirements.txt
upstream-learning-sources/awesome-ai-apps-curated/starter_ai_agents/langgraph_starter/: README.md  main.py  pyproject.toml  requirements.txt
upstream-learning-sources/awesome-ai-apps-curated/voice_agents/healthcare_contact_center/: .env.example  README.md  main.py  personalities.py  pyproject.toml
upstream-learning-sources/awesome-ai-apps-curated/voice_agents/healthcare_contact_center/data/: faq.json  slots.json
upstream-learning-sources/awesome-ai-apps-curated/voice_agents/healthcare_contact_center/tools/: appointments.py  escalation.py  knowledge_base.py
upstream-learning-sources/awesome-ai-apps-curated/voice_agents/livekit_rsvp_agent/: .env.example  README.md  agent.py  dispatch.py  pyproject.toml  tools.py
upstream-learning-sources/awesome-ai-apps-curated/voice_agents/livekit_rsvp_agent/data/: attendees.json  event.json
upstream-learning-sources/awesome-ai-apps-curated/voice_agents/livekit_web_search_agent/: .env.example  README.md  main.py  pyproject.toml
upstream-learning-sources/awesome-ai-apps-curated/voice_agents/pipecat_agent/: README.md  main.py  pyproject.toml
upstream-learning-sources/awesome-ai-apps-curated/voice_agents/speed_to_lead_agent/: .env.example  README.md  agent.py  crm.py  dispatch.py  pyproject.toml
(+221 files in other folders)
