[project]
name = "content-team-agent"
version = "0.1.0"
description = "AI-powered content SEO optimization workflow for Google AI Search ranking"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agno>=2.3.4",
    "google-search-results>=2.4.2",
    "openai>=2.8.1",
    "serpapi>=0.1.5",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "trafilatura>=1.6.0",
    "httpx>=0.25.0",
    "sqlalchemy>=2.0.45",
    "fastapi>=0.126.0",
    "streamlit>=1.28.0",
    "nest-asyncio>=1.5.8",
]
