[project]
name = "e2b-mcp-py"
version = "0.1.0"
description = "Python demo using E2B with GitHub and Notion MCP servers and OpenAI Agents SDK with Nebius Token Factory AI Model"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "e2b>=2.3.4",
    "python-dotenv>=1.1.1",
    "openai-agents>=0.1.0",
]
