[project]
name = "boeing-rag"
version = "0.1.0"
description = "Production-shaped RAG pipeline for Boeing annual and sustainability reports."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "sqlalchemy>=2.0.32",
  "psycopg[binary]>=3.2.1",
  "qdrant-client[fastembed]>=1.14.2",
  "fastembed>=0.7.4",
  "openai>=1.43.0",
  "pymupdf>=1.24.9",
  "markitdown[pdf]>=0.1.5",
  "markitdown-ocr>=0.1.0",
  "pandas>=2.2.2",
  "tabulate>=0.9.0",
  "numpy>=1.26.4",
  "typer>=0.12.5",
  "rich>=13.8.0",
  "python-dotenv>=1.0.1",
  "python-multipart>=0.0.20",
]

[project.optional-dependencies]
local-rerank = [
  "sentence-transformers>=3.0.1",
]
ocr = [
  "pytesseract>=0.3.13",
  "pillow>=10.4.0",
]

[project.scripts]
boeing-rag = "boeing_rag.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/boeing_rag"]

[tool.ruff]
line-length = 100
target-version = "py311"
