[project]
name = "qwen3-rag"
version = "0.1.0"
description = "PDF chatbot with Streamlit"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit",
    "llama-index",
    "llama-index-llms-nebius",
    "llama-index-embeddings-nebius",
    "python-dotenv",
    "PyPDF2",
    "pydantic",
]
