[project]
name = "agent-discovery-agent"
version = "0.1.0"
description = "AI Agent Discovery Agent using Registry Broker API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "agno>=1.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
