[project]
name = "autogen-starter"
version = "0.1.0"
description = "Microsoft AutoGen starter — AssistantAgent with a tool, powered by Nebius"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "autogen-agentchat>=0.4.0",
    "autogen-ext[openai]>=0.4.0",
    "python-dotenv>=1.0.1",
]
