[project]
name = "langchain-starter"
version = "0.1.0"
description = "LangChain starter — tool-calling agent powered by Nebius"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "python-dotenv>=1.0.1",
]
