[project]
name = "langgraph-starter"
version = "0.1.0"
description = "LangGraph starter — prebuilt ReAct agent powered by Nebius"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.2.50",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "python-dotenv>=1.0.1",
]
