[project]
name = "pipecat-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiortc>=1.14.0",
    "fastapi>=0.135.2",
    "loguru>=0.7.3",
    "pipecat-ai[daily,nebius,runner,sarvam,webrtc]>=1.0.0",
    "python-dotenv>=1.2.2",
]
